--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,18 @@ requires-python = ">=3.12.0"
 
 [project.optional-dependencies]
 dev = [
+  "furo",
   "ipykernel",
+  "myst-parser",
   "pylint",
   "pre-commit",
   "pytest",
   "refurb",
   "ruff",
-  "sphinx"
+  "sphinx",
+  "sphinx-autobuild",
+  "sphinx-copybutton",
+  "sphinx-autodoc-typehints"
 ]
 
 [project.urls]
